--- a/snapeditvn-clone/src/pages/blur-bg/style.css
+++ b/snapeditvn-clone/src/pages/blur-bg/style.css
@@ -31,6 +31,10 @@ p {
   padding: 0;
 }
 
+label {
+  cursor: pointer;
+}
+
 body {
   position: relative;
   background-color: #edf5fb;
@@ -78,6 +82,33 @@ header a:hover {
 
 header .nav {
   width: 50vw;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #fff;
+  min-width: 200px; /* Độ rộng tối thiểu của dropdown */
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.dropdown-content a {
+  color: #333;
+  padding: 10px 15px;
+  text-decoration: none;
+  display: flex;
+  align-items: center; /* Căn giữa icon và text theo chiều dọc */
+}
+
+.dropdown-content a:hover {
+  background-color: #e0e0e0;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
 }
 
 .sticky {
@@ -222,6 +253,19 @@ header .user {
 
 .introBlur {
   margin: 100px 0;
+}
+
+/* feature */
+
+.feature {
+  background-color: #1a1b2f;
+  padding: 100px 0;
+}
+
+.feature label {
+  padding: 10px 30px;
+  background: white;
+  border-radius: 20px;
 }
 
 /* Footer */
